--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pandas = "^1.5.0"
 numpy = "^1.23.3"
 sklearn = "^0.0"
 black = "^22.8.0"
+matplotlib = "^3.6.0"
 
 
 [tool.poetry.group.dev.dependencies]
