--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ numpy = "^1.23.3"
 sklearn = "^0.0"
 black = "^22.8.0"
 matplotlib = "^3.6.0"
+nbconvert = "^7.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
